sort.baseball.SelectBaseball.scala.error
Erreur de compilation :
SelectBaseball:58: error: reassignment to val
    baseLibre = getTrouBase()
              ^